# roasty

./: .env.example  .gitignore  README.md  pyproject.toml
data/debug_realtime/session_ea1b25f08e124547aee45ea8f113a5f6/: realtime_events.jsonl
docs/: current-code-walkthrough.md  gta-wasted-pipeline-walkthrough.md  sarcastic-gaming-ai-coach-architecture.md
src/sg_coach/: __init__.py  bootstrap.py  main.py
src/sg_coach/capture/: __init__.py  base.py  dxcam_backend.py  live_demo.py  replay_buffer.py
src/sg_coach/detectors/: __init__.py  base.py  demo.py  registry.py  worker.py
src/sg_coach/detectors/gta/: __init__.py  chaos.py  wanted_stars.py  wasted.py
src/sg_coach/detectors/valorant/: __init__.py  map_loading.py
src/sg_coach/fusion/: __init__.py  base.py  demo.py  worker.py
src/sg_coach/grok/: __init__.py  client.py  payloads.py
src/sg_coach/memory/: __init__.py  store.py  worker.py
src/sg_coach/orchestrator/: __init__.py  bus.py  commentary.py  demo_pipeline.py  gta_wanted_probe.py  gta_wasted_pipeline.py  live_pipeline.py  realtime.py  session.py  speech.py  topics.py  valorant_map_probe.py  valorant_pipeline.py  valorant_state.py
src/sg_coach/realtime/: __init__.py  client.py  user_voice.py
src/sg_coach/shared/: __init__.py  events.py  game_profiles.py  logging.py  settings.py  streaming.py  types.py
tests/: test_game_profiles.py  test_gta_chaos_detector.py  test_gta_wanted_stars_detector.py  test_user_voice.py  test_valorant_map_detector.py  test_valorant_pipeline.py  test_valorant_state_worker.py
