[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sarcastic-gaming-ai-coach"
version = "0.1.0"
description = "Local-first sarcastic gaming AI coach"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.6,<0.7",
]

[project.scripts]
sg-coach = "sg_coach.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_coach"]

[tool.ruff]
line-length = 100
target-version = "py311"

