[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "sarcastic-gaming-ai-coach"
version = "0.1.0"
description = "Local-first sarcastic gaming AI coach"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "dxcam>=0.0.5,<1",
  "numpy>=1.26,<3",
  "opencv-python>=4.10,<5",
  "pydantic>=2.8,<3",
  "pydantic-settings>=2.4,<3",
  "pynput>=1.7,<2",
  "sounddevice>=0.4,<1",
  "websockets>=13,<16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
  "ruff>=0.6,<0.7",
]

[project.scripts]
sg-coach = "sg_coach.main:main"
sg-coach-test-wanted = "sg_coach.orchestrator.gta_wanted_probe:main"
sg-coach-test-valorant = "sg_coach.orchestrator.valorant_pipeline:main"
sg-coach-probe-valorant-map = "sg_coach.orchestrator.valorant_map_probe:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sg_coach"]

[tool.ruff]
line-length = 100
target-version = "py311"
